Ability to apply the cover first volume of a manga series to be the cover of the whole series
